Add easyJobAggreagate swagger authorizationCode flow oauth2
